fix(forecast): unify market forecast caching, fail-closed shard routing and zero-external replay (v1.1.24)